// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View.native renders a snapshot with \`align:top,left\` 1`] = `
<View
  align="top left"
  direction="column"
  innerRef={[Function]}
  margin={0}
  padding={0}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`direction:row\` 1`] = `
<View
  align=""
  direction="row"
  innerRef={[Function]}
  margin={0}
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`grow:1\` 1`] = `
<View
  align=""
  direction="column"
  grow={1}
  innerRef={[Function]}
  margin={0}
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "flexGrow": 1,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`height:120\` 1`] = `
<View
  align=""
  direction="column"
  height={120}
  innerRef={[Function]}
  margin={0}
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`margin:'1 2'\` 1`] = `
<View
  align=""
  direction="column"
  innerRef={[Function]}
  margin="1 2"
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "marginBottom": 10,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`margin:10\` 1`] = `
<View
  align=""
  direction="column"
  innerRef={[Function]}
  margin={10}
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "marginBottom": 100,
        "marginLeft": 100,
        "marginRight": 100,
        "marginTop": 100,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`padding:10\` 1`] = `
<View
  align=""
  direction="column"
  innerRef={[Function]}
  margin={0}
  padding={10}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 100,
        "paddingLeft": 100,
        "paddingRight": 100,
        "paddingTop": 100,
      },
      undefined,
    ]
  }
/>
`;

exports[`View.native renders a snapshot with \`width:120\` 1`] = `
<View
  align=""
  direction="column"
  innerRef={[Function]}
  margin={0}
  padding={0}
  style={
    Array [
      Object {
        "flexDirection": "column",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
  width={120}
/>
`;
